<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@drawable/background"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/log_in_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/font"
            android:text="@string/log_in"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/font"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:fontFamily="@font/font"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="190dp"
            android:fontFamily="@font/font"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:fontFamily="@font/font"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/logIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="330dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/login"
            android:textSize="18sp"
            app:backgroundTint="@color/black"
            app:cornerRadius="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="400dp"
            android:fontFamily="@font/font"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="230dp"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="400dp"
            android:fontFamily="@font/font"
            android:text="@string/sing_up"
            android:textColor="@color/black"
            android:textSize="13sp" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>